--- a/index.html
+++ b/index.html
@@ -80,65 +80,74 @@
                 </div>
 
                 <div id="full-form">
-                    <div>
-                        <form>
+                    <div class="form-container">
+                        <form id="myForm">
                             <div class="niz-input d-flex gap-4 align-items-center flex-wrap">
                                 <div>
-                                    <label for="dob" class="dob-label">From Date</label>
-                                    <input type="date" id="dob" name="dob" value="2009-08-06" class="dob-input">
+                                    <label for="from-date" class="dob-label">From Date</label>
+                                    <input type="date" id="from-date" name="from-date" class="dob-input">
+                                    <span id="ind-from-date"></span>
                                 </div>
                                 <div>
-                                    <label for="dob" class="dob-label">To Date</label>
-                                    <input type="date" id="dob" name="dob" value="2009-08-06" class="dob-input">
+                                    <label for="to-date" class="dob-label">To Date</label>
+                                    <input type="date" id="to-date" name="to-date" class="dob-input">
+                                    <span id="ind-to-date"></span>
                                 </div>
                                 <div>
                                     <label class="dropdown-label">Corporate Name</label>
                                     <select id="corporate-name" name="corporate-name" class="dropdown-input">
-                                        <option>Select Corporate Name</option>
-                                        <option>NIZCARE PRIVATE LIMITED</option>
+                                        <option value="">Select Corporate Name</option>
+                                        <option value="NIZCARE PRIVATE LIMITED">NIZCARE PRIVATE LIMITED</option>
                                     </select>
+                                    <span id="ind-corporate"></span>
                                 </div>
                                 <div>
                                     <label class="dropdown-label">Select Status</label>
-                                    <select id="corporate-name" name="corporate-name" class="dropdown-input">
-                                        <option>Select Status</option>
-                                        <option>Orders Confirmed</option>
-                                        <option>Bill Generated</option>
-                                        <option>Orders Completed</option>
-                                        <option>Orders Cancelled</option>
+                                    <select id="status" name="status" class="dropdown-input">
+                                        <option value="">Select Status</option>
+                                        <option value="Orders Confirmed">Orders Confirmed</option>
+                                        <option value="Bill Generated">Bill Generated</option>
+                                        <option value="Orders Completed">Orders Completed</option>
+                                        <option value="Orders Cancelled">Orders Cancelled</option>
                                     </select>
+                                    <span id="ind-status"></span>
                                 </div>
                             </div>
 
                             <div class="care-input d-flex gap-4 align-items-center flex-wrap mt-4">
-                                <div class="d-flex align-items-center gap-2">
-                                    <input type="radio" name="date">
-                                    <label>By Booking Date</label>
+                                <div>
+                                    <div class="d-flex gap-3">
+                                        <div class="d-flex align-items-center gap-2">
+                                            <input type="radio" name="date" value="by-booking-date">
+                                            <label>By Booking Date</label>
+                                        </div>
+                                        <div class="d-flex gap-2">
+                                            <input type="radio" name="date" value="by-appointment-date">
+                                            <label>By Appointment Date</label>
+                                        </div>
+                                    </div>
+                                    <span id="ind-date-option"></span>
                                 </div>
-                                <div class="d-flex gap-2">
-                                    <input type="radio" name="date">
-                                    <label>By Appointment Date</label>
-                                </div>
-                                <button style="background-color: lightgray;">CLEAR</button>
-                                <button style="background-color: #229ea6; color: #fff;" type="submit">SUBMIT</button>
-                                <button style="background-color: #229ea6; color: #fff;" type="submit">DOWNLOAD AS
+                                <button type="button" onclick="clearForm()"
+                                    style="background-color: lightgray;">CLEAR</button>
+                                <button type="submit" style="background-color: #229ea6; color: #fff;">SUBMIT</button>
+                                <button type="submit" style="background-color: #229ea6; color: #fff;">DOWNLOAD AS
                                     EXCEL</button>
                             </div>
                         </form>
                     </div>
 
-                    <div class="d-flex justify-content align-items-center flex-wrap mt-4">
+                    <div class="d-flex gap-4 align-items-center mt-4">
+                        <div class="search-container">
+                            <input type="text" id="search" name="search" class="search-input" placeholder="Search">
+                        </div>
                         <div>
-                            <!-- <label for="search" class="search-label">Search</label> -->
-                            <div class="search-container">
-                                <input type="text" id="search" name="search" class="search-input" placeholder="Search">
-                            </div>
+                            <a href="#" id="search-btn">Click For Search</a>
                         </div>
                     </div>
 
                     <div class="board mt-4">
                         <table width="100%">
-
                             <thead>
                                 <tr>
                                     <td>Appointment Id</td>
@@ -149,227 +158,60 @@
                                     <td>Action</td>
                                 </tr>
                             </thead>
-
-                            <tbody>
+                            <tbody id="table-body">
                                 <tr>
                                     <td class="people">
                                         <h5>252082</h5>
                                     </td>
-
                                     <td class="people-des">
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
-
                                     <td class="active">
                                         <p>Donepati Ajith</p>
                                     </td>
-
                                     <td class="role">
                                         <p>charanjithasingh@nizcare.com</p>
                                     </td>
-
                                     <td class="edit">
                                         <p>8919095553</p>
                                     </td>
-
                                     <td>
                                         <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#">
-                                                <i class="fa-solid fa-eye"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-circle-xmark"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-clock-rotate-left"></i>
-                                            </a>
+                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
+                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
                                         </div>
                                     </td>
                                 </tr>
-
+                                <!-- Add more rows as necessary -->
                                 <tr>
                                     <td class="people">
                                         <h5>251955</h5>
                                     </td>
-
                                     <td class="people-des">
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
-
                                     <td class="active">
                                         <p>Savita</p>
                                     </td>
-
                                     <td class="role">
                                         <p>charanjithasingh@nizcare.com</p>
                                     </td>
-
                                     <td class="edit">
                                         <p>9353150621</p>
                                     </td>
-
                                     <td>
                                         <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#">
-                                                <i class="fa-solid fa-eye"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-circle-xmark"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-clock-rotate-left"></i>
-                                            </a>
+                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
+                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
                                         </div>
                                     </td>
                                 </tr>
-
-                                <tr>
-                                    <td class="people">
-                                        <h5>251950</h5>
-                                    </td>
-
-                                    <td class="people-des">
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-
-                                    <td class="active">
-                                        <p>Mohammad Noorjahan</p>
-                                    </td>
-
-                                    <td class="role">
-                                        <p>network@nizcare.com</p>
-                                    </td>
-
-                                    <td class="edit">
-                                        <p>7095437657</p>
-                                    </td>
-
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#">
-                                                <i class="fa-solid fa-eye"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-circle-xmark"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-clock-rotate-left"></i>
-                                            </a>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td class="people">
-                                        <h5>251855</h5>
-                                    </td>
-
-                                    <td class="people-des">
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-
-                                    <td class="active">
-                                        <p>Tharun M</p>
-                                    </td>
-
-                                    <td class="role">
-                                        <p>network@nizcare.com</p>
-                                    </td>
-
-                                    <td class="edit">
-                                        <p>6366313835</p>
-                                    </td>
-
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#">
-                                                <i class="fa-solid fa-eye"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-circle-xmark"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-clock-rotate-left"></i>
-                                            </a>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td class="people">
-                                        <h5>251486</h5>
-                                    </td>
-
-                                    <td class="people-des">
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-
-                                    <td class="active">
-                                        <p>Kumkum Kumari</p>
-                                    </td>
-
-                                    <td class="role">
-                                        <p>charanjithasingh@nizcare.com</p>
-                                    </td>
-
-                                    <td class="edit">
-                                        <p>8287371389</p>
-                                    </td>
-
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#">
-                                                <i class="fa-solid fa-eye"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-circle-xmark"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-clock-rotate-left"></i>
-                                            </a>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td class="people">
-                                        <h5>251480</h5>
-                                    </td>
-
-                                    <td class="people-des">
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-
-                                    <td class="active">
-                                        <p>Kavita Rajkumar Benda</p>
-                                    </td>
-
-                                    <td class="role">
-                                        <p>network@nizcare.com</p>
-                                    </td>
-
-                                    <td class="edit">
-                                        <p>8919095553</p>
-                                    </td>
-
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#">
-                                                <i class="fa-solid fa-eye"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-circle-xmark"></i>
-                                            </a>
-                                            <a href="#">
-                                                <i class="fa-solid fa-clock-rotate-left"></i>
-                                            </a>
-                                        </div>
-                                    </td>
-                                </tr>
-
+                                <!-- Continue adding rows as needed -->
                             </tbody>
-
                         </table>
+                        <!-- <span class="mt-3" id="no-data">No Data Found</span> -->
                     </div>
 
                 </div>
@@ -377,7 +219,6 @@
         </div>
         <!-- Maincontent end -->
     </div>
-
 
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
