--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NIZCARE BOOKING</title>
+    <title>Nizcare Booking</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <link rel="icon" href="./images/wepage-log.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -138,9 +138,10 @@
 
                     <div class="d-flex gap-4 align-items-center mt-4">
                         <div class="search-container">
-                            <input type="text" id="search" name="search" class="search-input" placeholder="Search by Appointment-Id or Name ">
+                            <input type="text" id="search" name="search" class="search-input"
+                                placeholder="Search by Appointment-Id or Name ">
                         </div>
-                        <div id="search">
+                        <div>
                             <a href="#" id="search-btn">CLICK FOR SEARCH</a>
                         </div>
                     </div>
@@ -163,19 +164,19 @@
                             </thead>
                             <tbody id="table-body">
                                 <tr>
-                                    <td class="people">
+                                    <td>
                                         <h5>252082</h5>
                                     </td>
-                                    <td class="people-des">
+                                    <td>
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
-                                    <td class="active">
+                                    <td>
                                         <p>Donepati Ajith</p>
                                     </td>
-                                    <td class="role">
+                                    <td>
                                         <p>charanjithasingh@nizcare.com</p>
                                     </td>
-                                    <td class="edit">
+                                    <td>
                                         <p>8919095553</p>
                                     </td>
                                     <td>
@@ -188,19 +189,19 @@
                                 </tr>
 
                                 <tr>
-                                    <td class="people">
+                                    <td>
                                         <h5>252062</h5>
                                     </td>
-                                    <td class="people-des">
+                                    <td>
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
-                                    <td class="active">
+                                    <td>
                                         <p>Donepati</p>
                                     </td>
-                                    <td class="role">
+                                    <td>
                                         <p>donepati@nizcare.com</p>
                                     </td>
-                                    <td class="edit">
+                                    <td>
                                         <p>8919095553</p>
                                     </td>
                                     <td>
@@ -236,21 +237,21 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <!-- Add more rows as necessary -->
+
                                 <tr>
-                                    <td class="people">
+                                    <td>
                                         <h5>251976</h5>
                                     </td>
-                                    <td class="people-des">
+                                    <td>
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
-                                    <td class="active">
+                                    <td>
                                         <p>Ranjith</p>
                                     </td>
-                                    <td class="role">
+                                    <td>
                                         <p>ranjith@nizcare.com</p>
                                     </td>
-                                    <td class="edit">
+                                    <td>
                                         <p>9353150621</p>
                                     </td>
                                     <td>
@@ -263,19 +264,19 @@
                                 </tr>
 
                                 <tr>
-                                    <td class="people">
+                                    <td>
                                         <h5>251976</h5>
                                     </td>
-                                    <td class="people-des">
+                                    <td>
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
-                                    <td class="active">
+                                    <td>
                                         <p>Muthu</p>
                                     </td>
-                                    <td class="role">
+                                    <td>
                                         <p>muthu@nizcare.com</p>
                                     </td>
-                                    <td class="edit">
+                                    <td>
                                         <p>9313127682</p>
                                     </td>
                                     <td>
@@ -288,19 +289,19 @@
                                 </tr>
 
                                 <tr>
-                                    <td class="people">
+                                    <td>
                                         <h5>251236</h5>
                                     </td>
-                                    <td class="people-des">
+                                    <td>
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
-                                    <td class="active">
+                                    <td>
                                         <p>Hariram</p>
                                     </td>
-                                    <td class="role">
+                                    <td>
                                         <p>hari@nizcare.com</p>
                                     </td>
-                                    <td class="edit">
+                                    <td>
                                         <p>9353896321</p>
                                     </td>
                                     <td>
@@ -311,10 +312,11 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <!-- Continue adding rows as needed -->
+
                             </tbody>
                         </table>
-                        <!-- <span class="mt-3" id="no-data">No Data Found</span> -->
+                        <span class="mt-3 mx-3" id="no-data" style="display: none; color: red; font-weight: 600;">No
+                            Data Found</span>
                     </div>
                 </div>
                 <footer>
